# mtcl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.bat  install.sh
src/mt/: all.h  attr.h  cstr.c  cstr.h  generic.h  meta.h  varg.h
src/mt/debug/: all.h  assert.c  assert.h  if.h
src/mt/mem/: all.h  heap.c  heap.h  manip.c  manip.h  sptr.c  sptr.h
src/mt/oo/: all.h
src/mt/oo/iface/: all.h  desc.h  iface.h  meta.c  meta.h  reg.c  reg.h  type.c  type.h
src/mt/oo/interface/: all.h  type.c  type.h
src/mt/oo/object/: all.h  type.h
src/mt/oo/type/: all.h  desc.c  desc.h  reg.c  reg.h  registry.c  registry.h  type.c  type.h  typed.c  typed.h
src/mt/oo/type/meta/: all.h  reg.c  reg.h  registry.c  registry.h  type.c  type.h
src/mt/prim/: all.h  ctype.c  ctype.h  def.h  enum.c  enum.h  func.c  func.h  limits.h
src/mt/prog/: all.h  env.c  env.h  sys.c  sys.h  term.c  term.h
